--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,303 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Secular+One&display=swap");
+* {
+  box-sizing: border-box;
+  /* font-family: 'Dancing Script', cursive;
+   */
+  font-family: "Secular One", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,
+body {
+  height: 100%;
+}
+.full-box {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.items {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border: 5px solid #ffff00;
+  padding: 10px;
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+:root {
+  --nav-width: 68px;
+  --first-color: #ffffff;
+  --first-color-light: #ae9aff;
+  --white-color: #ffffff;
+  --body-font: "Nunito", sans-serif;
+  --normal-font-size: 1rem;
+}
+
+
+/* .header {
+  height: 5rem;
+} */
+a {
+  text-decoration: none;
+}
+
+
+.l-navbar {
+  position: fixed;
+  top: 0;
+  left: -30%;
+  width: var(--nav-width);
+  height: 100vh;
+  background-color: var(--first-color);
+  padding: 0.5rem 1rem 0 0;
+  transition: 0.5s;
+  z-index: var(--z-fixed);
+}
+.nav {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
+}
+.nav_logo,
+.nav_link {
+  display: grid;
+  grid-template-columns: max-content max-content;
+  align-items: center;
+  column-gap: 1rem;
+  padding: 0.5rem 0 0.5rem 1.5rem;
+}
+.nav_logo {
+   width: 0.5rem;
+  margin-bottom: 2rem;
+}
+.nav_logo-icon {
+  font-size: 2rem;
+  color: var( --first-color-light);
+}
+.nav_logo-name {
+  color: var( --first-color-light);
+  font-weight: 700;
+}
+.nav_link {
+  position: relative;
+  color: var(--first-color-light);
+  margin-bottom: 1.5rem;
+  transition: 0.3s;
+}
+.nav_link:hover {
+  color: var(--white-color);
+}
+.nav_icon {
+  font-size: 1.25rem;
+}
+.show {
+  left: 0;
+}
+.body-pd {
+  padding-left: calc(var(--nav-width) + 1rem);
+}
+.active {
+  color: var( --first-color-light);
+}
+.active::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 2px;
+  height: 32px;
+  background-color: var(--white-color);
+}
+.height-100 {
+  height: 100vh;
+}
+@media screen and (min-width: 768px) {
+  body {
+    margin: calc(var(--header-height) + 1rem) 0 0 0;
+    padding-left: calc(var(--nav-width) + 2rem);
+  }
+
+  .l-navbar {
+    left: 0;
+    padding: 1rem 1rem 0 0;
+  }
+  .show {
+    width: calc(var(--nav-width) + 156px);
+  }
+  .body-pd {
+    padding-left: calc(var(--nav-width) + 188px);
+  }
+}
+
+
+
+/*  */
+.maincontent {
+  border: 2px solid rebeccapurple;
+        background-color: #ffffff;
+         width: 100%;
+          height: 90%;
+}
+.nav_mainpage{
+  background-color: #ffffff;
+   width: 1600px;
+    height: 1000px;
+     border: 2px solid rgb(255, 255, 255);
+    
+}
+.some-page-wrapper {
+   width: 98%;
+    height: 100%;
+  margin: 15px;
+  background-color: rgb(255, 255, 255);
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  
+   
+}
+.row-column {
+   margin-bottom: 2rem;
+}
+.column {
+  
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.orange-column {
+  background-color: rgb(255, 255, 255);
+  height: 420px;
+  
+}
+
+.blue-column {
+  background-color: rgb(255, 255, 255);
+  height: 420px;
+}
+
+.green-column {
+  background-color: rgb(255, 255, 255);
+  height: 420px;
+}
+
+
+
+
+
+
+/* navbar */
+.navbarmain {
+  height: 5rem;
+   background-color: #f7f6fb;
+}
+
+
+
+/* maincontent */
+.blue-column h4
+{
+   margin-left: 1rem;
+  font-size: 1.5rem;
+}
+ .orange-column .heading {
+  margin-left: 1rem;
+  font-size: 1.5rem;
+ } 
+
+ /* blood one */
+ .Bloodanalysis{
+  background-color: #f7f6fb;
+ }
+
+ /* cratesmall badge 
+  */
+
+
+  /* From uiverse.io by @alexruix */
+.card {
+ width: 100px;
+ height: 100px;
+ padding: .8em;
+ background: #f5f5f5;
+ position: relative;
+ overflow: visible;
+ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.card-imge{
+  width: 45%;
+}
+
+.card-img {
+ background-color: #ffcaa6;
+ height: 20%;
+ width: 30%;
+ border-radius: .5rem;
+ transition: .3s ease;
+}
+
+.card-info {
+ padding-top: 10%;
+}
+
+svg {
+ width: 20px;
+ height: 20px;
+}
+
+.card-footer {
+ width: 100%;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ padding-top: 10px;
+ border-top: 1px solid #ddd;
+}
+
+/*Text*/
+.text-title {
+ font-weight: 900;
+ font-size: 1.2em;
+ line-height: 1.5;
+}
+
+.text-body {
+ font-size: .9em;
+ padding-bottom: 10px;
+}
+
+/*Button*/
+.card-button {
+ border: 1px solid #252525;
+ display: flex;
+ padding: .3em;
+ cursor: pointer;
+ border-radius: 50px;
+ transition: .3s ease-in-out;
+}
+
+/*Hover*/
+.card-img:hover {
+ transform: translateY(-25%);
+ box-shadow: rgba(226, 196, 63, 0.25) 0px 13px 47px -5px, rgba(180, 71, 71, 0.3) 0px 8px 16px -8px;
+}
+
+.card-button:hover {
+ border: 1px solid #ffcaa6;
+ background-color: #ffcaa6;
 }
